<resources>
    <string name="app_name">ProtereotitApp</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_password">Συνθηματική Φράση (optional)</string>
    <string name="action_sign_in">Sign in or register</string>
    <string name="action_sign_in_short">Sign in</string>
    <string name="error_invalid_email">This email address is invalid</string>
    <string name="error_invalid_password">This password is too short</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">This field is required</string>
    <string name="permission_rationale">"Contacts permissions are needed for providing email
        completions."
    </string>
    <string name="title_activity_main">MainActivity</string>

    <string name="navigation_drawer_open">Άνοιγμα του μενού</string>
    <string name="navigation_drawer_close">Κλείσιμο του μενύ</string>

    <string name="action_settings">Ρυθμίσεις</string>
    <string name="ZeroTag">Αρχική</string>
    <string name="FirstTag">Αίτηση αριθμού προτεραιότητας</string>
    <string name="SecondTag">Τo εισιτήριό μου</string>
    <string name="ThirdTag">Ζωντανή ενημέρωση προτεραιότητας</string>
    <string name="FourthTag">Ρυθμίσεις</string>
    <string name="FifthTag">Πληροφορίες</string>
    <string name="SixthTag">Αποσύνδεση</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

    <string-array name="service_array">
        <item>ΙΚΑ</item>
        <item>ΔΟΥ</item>
        <item>ΚΕΠ</item>
        <item>ΕΛΤΑ</item>
    </string-array>
    <string name="title_activity_places">PlacesActivity</string>
    <string name="myTicketsHeader">Τα εισιτήρια μου</string>

    <string name="selected_place">Last Selected Place:</string>
    <string name="place_details">
    <![CDATA[
        <b>%1$s</b>
        <br/>
        <i>Place Id: %2$s</i>
        <br/>
        Address: %3$s
        <br/>
        Phone: %4$s
        <br/>
        Website: %5$s
    ]]>
    </string>

    <string name="intro_message">
        <![CDATA[


            This sample uses the PlaceAutocompleteFragment from the Places API for Android within a
            CardView to provide an autocomplete powered search experience. Once a place is selected,
            its details are displayed.


        ]]>
    </string>

</resources>
