<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android">

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_ticket"
            android:icon="@drawable/ic_library_add"
            android:title="@string/FirstTag" />
        <item
            android:id="@+id/nav_myTickets"
            android:icon="@drawable/ic_menu_gallery"
            android:title="@string/SecondTag" />
        <item
            android:id="@+id/nav_live"
            android:icon="@drawable/ic_menu_slideshow"
            android:title="@string/ThirdTag" />
        <item
        android:id="@+id/nav_manage"
        android:icon="@drawable/ic_menu_manage"
        android:title="@string/FourthTag" />
        <item
            android:id="@+id/nav_info"
            android:icon="@drawable/ic_menu_info"
            android:title="@string/FifthTag" />

    </group>



</menu>
